<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/c"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/curMissed"
        android:layout_width="155dp"
        android:layout_height="47dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/curMissed"
        android:textColor="@color/offwhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <ImageView
        android:id="@+id/titleBackground"
        android:layout_width="363dp"
        android:layout_height="90dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/title_background" />

    <TextView
        android:id="@+id/title"
        android:layout_width="363dp"
        android:layout_height="90dp"
        android:contentDescription="title of app"
        android:fontFamily="@font/aldrich"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/title"
        android:textColor="#EFDCDC"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <LinearLayout
        android:id="@+id/playArea"
        android:layout_width="365dp"
        android:layout_height="464dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <LinearLayout
            android:id="@+id/boxes1thru3"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/box1"
                android:layout_width="121dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/target1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onTargetClicked"
                    app:srcCompat="@drawable/target" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box2"
                android:layout_width="121dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/target2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onTargetClicked"
                    app:srcCompat="@drawable/target" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box3"
                android:layout_width="121dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/target3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onTargetClicked"
                    app:srcCompat="@drawable/target" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boxes4thru6"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/box4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/target4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onTargetClicked"
                    app:srcCompat="@drawable/target" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/target5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onTargetClicked"
                    app:srcCompat="@drawable/target" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/target6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onTargetClicked"
                    app:srcCompat="@drawable/target" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boxes7thru9"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/box7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/target7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onTargetClicked"
                    app:srcCompat="@drawable/target" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/target8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onTargetClicked"
                    app:srcCompat="@drawable/target" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/target9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onTargetClicked"
                    app:srcCompat="@drawable/target" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boxes10thru12"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/box10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/target10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onTargetClicked"
                    app:srcCompat="@drawable/target" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/target11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onTargetClicked"
                    app:srcCompat="@drawable/target" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/box12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/target12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onTargetClicked"
                    app:srcCompat="@drawable/target" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onStartClicked"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/playArea"
        app:layout_constraintEnd_toStartOf="@+id/highscore"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="@+id/score"
        app:layout_constraintTop_toBottomOf="@+id/titleBackground"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/score"
        android:layout_width="105dp"
        android:layout_height="75dp"
        android:layout_marginTop="6dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/score"
        android:textColor="@color/offwhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/playArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBackground"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/highscore"
        android:layout_width="105dp"
        android:layout_height="75dp"
        android:layout_marginTop="6dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/highscore"
        android:textColor="@color/offwhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/playArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBackground"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/runningTime"
        android:layout_width="186dp"
        android:layout_height="32dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/time"
        android:textColor="@color/offwhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.987" />

</androidx.constraintlayout.widget.ConstraintLayout>